--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,182 @@
-*,*::before,*::after{margin:0;padding:0}html{box-sizing:border-box;font-size:62.5%}@media only screen and (max-width: 375px){html{font-size:50%}}body{box-sizing:inherit;font-family:"Outfit",sans-serif;font-weight:400;line-height:1.6;background-color:hsl(30, 54%, 90%)}.ml-s{margin-left:2rem}.ml-m{margin-left:3rem}.pl-s{padding-left:2rem}.pl-m{padding-left:3rem}.bb{border-bottom:1px solid hsl(30, 18%, 87%);padding-bottom:2rem}.mb-s{margin-bottom:2rem}.mb-es{margin-bottom:1rem}.heading-1{font-family:"Young Serif",serif;color:#000;font-size:2.4rem;font-weight:400}.heading-2{font-family:"Young Serif",serif;font-weight:400;font-size:2rem;color:hsl(14, 45%, 36%)}.heading-3{font-weight:600;font-size:1.6rem;color:hsl(332, 51%, 32%)}.text--bold{font-weight:bold;color:hsl(30, 10%, 34%)}.container{display:flex;align-items:center;justify-content:center;margin:8rem;font-size:1.6rem;color:hsl(30, 10%, 34%)}@media only screen and (max-width: 23.4375em){.container{width:100%;margin:0}}.recipe__box{width:40%;background-color:hsl(0, 0%, 100%);border-radius:1.5rem;padding:4rem;display:flex;flex-direction:column;gap:2rem}@media only screen and (max-width: 23.4375em){.recipe__box{width:100%;padding:0rem}.recipe__box>*:not(:first-child){padding:3rem}}.recipe__image{height:auto;max-width:100%;border-radius:8px}.recipe__ingredients{line-height:2}.recipe__ingredients--ing{padding-left:2rem}.recipe__description--text{font-size:1.6rem}.recipe__description--preparation{border-radius:5px;margin-top:2rem;background-image:linear-gradient(rgba(123, 40, 79, 0.08), rgba(123, 40, 79, 0.08));padding:1rem 2rem;line-height:2}.recipe__instructions--box{margin-left:2rem;list-style:decimal;color:hsl(14, 45%, 36%);font-weight:bold}.recipe__instructions--text{display:block;color:hsl(30, 10%, 34%);font-weight:400}.recipe__Nutrition--table{display:grid;grid-template-columns:1fr 1fr}.recipe__Nutrition--table>*{padding:2rem 4rem}.nutrition:nth-child(even){color:hsl(14, 45%, 36%);font-weight:bold}/*# sourceMappingURL=style.css.map */
+/*
+## Colors
+
+### Primary
+
+- Nutmeg: hsl(14, 45%, 36%)
+- Dark Raspberry: hsl(332, 51%, 32%)
+
+### Neutral
+
+- White: hsl(0, 0%, 100%)
+- Rose White: hsl(330, 100%, 98%)
+- Eggshell: hsl(30, 54%, 90%)
+- Light Grey: hsl(30, 18%, 87%)
+-  Brown: hsl(30, 10%, 34%)
+- Dark Charcoal: hsl(24, 5%, 18%)
+- Font size (paragraph): 16px
+*/
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 375px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+body {
+  box-sizing: inherit;
+  font-family: "Outfit", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  background-color: hsl(30, 54%, 90%);
+}
+
+.ml-s {
+  margin-left: 2rem;
+}
+
+.ml-m {
+  margin-left: 3rem;
+}
+
+.pl-s {
+  padding-left: 2rem;
+}
+
+.pl-m {
+  padding-left: 3rem;
+}
+
+.bb {
+  border-bottom: 1px solid hsl(30, 18%, 87%);
+  padding-bottom: 2rem;
+}
+
+.mb-s {
+  margin-bottom: 2rem;
+}
+
+.mb-es {
+  margin-bottom: 1rem;
+}
+
+.heading-1 {
+  font-family: "Young Serif", serif;
+  color: #000;
+  font-size: 2.4rem;
+  font-weight: 400;
+}
+
+.heading-2 {
+  font-family: "Young Serif", serif;
+  font-weight: 400;
+  font-size: 2rem;
+  color: hsl(14, 45%, 36%);
+}
+
+.heading-3 {
+  font-weight: 600;
+  font-size: 1.6rem;
+  color: hsl(332, 51%, 32%);
+}
+
+.text--bold {
+  font-weight: bold;
+  color: hsl(30, 10%, 34%);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 6rem;
+  font-size: 1.6rem;
+  color: hsl(30, 10%, 34%);
+}
+@media only screen and (max-width: 23.4375em) {
+  .container {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+.recipe__box {
+  width: 30%;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 1.5rem;
+  padding: 4rem;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+@media only screen and (max-width: 23.4375em) {
+  .recipe__box {
+    width: 100%;
+    padding: 0rem;
+  }
+  .recipe__box > *:not(:first-child) {
+    padding: 3rem;
+  }
+}
+
+.recipe__image {
+  height: auto;
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+.recipe__ingredients {
+  line-height: 2;
+}
+.recipe__ingredients--ing {
+  padding-left: 2rem;
+}
+
+.recipe__description--text {
+  font-size: 1.6rem;
+}
+.recipe__description--preparation {
+  border-radius: 5px;
+  margin-top: 2rem;
+  background-image: linear-gradient(rgba(123, 40, 79, 0.08), rgba(123, 40, 79, 0.08));
+  padding: 1rem 2rem;
+  line-height: 2;
+}
+
+.recipe__instructions--box {
+  margin-left: 2rem;
+  list-style: decimal;
+  color: hsl(14, 45%, 36%);
+  font-weight: bold;
+}
+.recipe__instructions--text {
+  display: block;
+  color: hsl(30, 10%, 34%);
+  font-weight: 400;
+}
+
+.recipe__Nutrition--table {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.recipe__Nutrition--table > * {
+  padding: 2rem 4rem;
+}
+
+.nutrition:nth-child(even) {
+  color: hsl(14, 45%, 36%);
+  font-weight: bold;
+}
+
+/*# sourceMappingURL=style.css.map */
